--- a/weather-news-app/package.json
+++ b/weather-news-app/package.json
@@ -10,6 +10,8 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "request": "^2.88.0"
+    "chalk": "^2.4.2",
+    "request": "^2.88.0",
+    "request-ip": "^2.1.3"
   }
 }
